# poseidon

./: .gitignore  MCSL_results.sh  MCSL_test.sh  MCSL_test_v2.sh  Makefile  Project overview.lyx  README  README.md  dev.sh  gramme.sh  many.sh  results.sh  test.sh  todo.txt
Converter/script/: poseidon-conv  poseidon_converter.sh
Degenerated/: Makefile
Degenerated/src/: CMakeLists.txt  DEGEN.cpp  options.cpp  options.h
Graph_generator/: Makefile  graph_generator.exe.stackdump
Graph_generator/src/: CMakeLists.txt  graph_generator.cpp  graph_generator.h  higher_order.h  main.cpp  options.cpp  options.h  util.cpp  util.hpp
MCSL/: Makefile  create_xml.sh
Report/: 2-page abstract.lyx  Bounds.xlsx  TODO.lyx  eume_presentation.ppt  presentation.ppt  report.lyx
data/: all2all3x3.xml  async.xml  bitorus10x10.xml  bitorus11x11.xml  bitorus12x12.xml  bitorus13x13.xml  bitorus14x14.xml  bitorus15x15.xml  bitorus16x16.xml  bitorus20x20.xml  bitorus2x2.xml  bitorus30x30.xml  bitorus3x3.xml  bitorus4x4.xml  bitorus5x5.xml  bitorus6x6.xml  bitorus7x7.xml  bitorus8x8.xml  bitorus9x9.xml  mesh10x10.xml  mesh14x14.xml  mesh15x15.xml  mesh3x3.xml  mesh4x4.xml  mesh5x5.xml  mesh6x6.xml  mesh7x7.xml  mesh8x8.xml  mesh9x9.xml  test.xml  ugly.xml
doc/: Makefile  output.xml  poseidon.doxy  preHandIn.lyx
latency_test/: extract_latency.py  sigma_curv.sh  util.py
metanoc/: stddev.sh
scripts/: async_test.sh  define.sh  gramme.sh
src/: CMakeLists.txt  IOutput.h  draw.cpp  draw.hpp  file.cpp  file.hpp  graph_generator.cpp  graph_generator.h  higher_order.h  lex_cast.cpp  lex_cast.h  main.cpp  matrix.cpp  matrix.hpp  maxset.cpp  maxset.hpp  network_t.cpp  network_t.hpp  options.cpp  options.h  output.cpp  output.hpp  parser.cpp  parser.hpp  schedule.cpp  schedule.hpp  schedulers.cpp  schedulers.hpp  stats.cpp  stats.hpp  structs.cpp  svg.cpp  svg.h  test.xml  util.cpp  util.hpp  vhdlOutput.cpp  vhdlOutput.h  xmlOutput.cpp  xmlOutput.h
stats/: stat-f._data_bitorus10x10.xml-mALNS-t1800-iBAD_RANDOM__2012-04-20_15:27:07__4218420583  stat-f._data_bitorus10x10.xml-mALNS-t1800-iGREEDY__2012-04-20_16:27:09__3927154408  stat-f._data_bitorus10x10.xml-mALNS-t1800-iRANDOM__2012-04-20_14:57:08__2124236893  stat-f._data_bitorus10x10.xml-mALNS-t1800-irGREEDY__2012-04-20_17:57:15__2080072732  stat-f._data_bitorus10x10.xml-mBAD_RANDOM__2012-04-20_14:57:07__516215422  stat-f._data_bitorus10x10.xml-mGRASP-t1800-b0.01__2012-04-20_17:57:15__2464573993  stat-f._data_bitorus10x10.xml-mGRASP-t1800-b0.025__2012-04-20_15:57:08__1019163488  stat-f._data_bitorus10x10.xml-mGRASP-t1800-b0.05__2012-04-20_15:27:07__1148572283  stat-f._data_bitorus10x10.xml-mGRASP-t1800-b0.075__2012-04-20_15:57:08__611279088  stat-f._data_bitorus10x10.xml-mGRASP-t1800-b0.1__2012-04-20_14:57:08__1196882220  stat-f._data_bitorus10x10.xml-mGRASP-t1800-b0.2__2012-04-20_15:27:06__1194593819  stat-f._data_bitorus10x10.xml-mGRASP-t1800-b0.3__2012-04-20_14:57:05__3061716922  stat-f._data_bitorus10x10.xml-mGRASP-t1800-b0.5__2012-04-20_15:27:06__1951991001  stat-f._data_bitorus10x10.xml-mGRASP-t1800-b0__2012-04-20_15:27:07__2617682094  stat-f._data_bitorus10x10.xml-mGRASP-t1800-b1.0__2012-04-20_14:57:05__496057793  stat-f._data_bitorus10x10.xml-mGREEDY__2012-04-20_15:57:08__3451163798  stat-f._data_bitorus10x10.xml-mRANDOM__2012-04-20_14:57:05__2665962785  stat-f._data_bitorus10x10.xml-mrGREEDY__2012-04-20_14:57:09__3015869204  stat-f._data_bitorus15x15.xml-mALNS-t1800-iBAD_RANDOM__2012-04-20_02:31:16__3384308331  stat-f._data_bitorus15x15.xml-mALNS-t1800-iBAD_RANDOM__2012-04-20_08:39:25__832936591  stat-f._data_bitorus15x15.xml-mALNS-t1800-iBAD_RANDOM__2012-04-20_10:28:06__1006258837  stat-f._data_bitorus15x15.xml-mALNS-t1800-iBAD_RANDOM__2012-04-20_14:17:21__144834354  stat-f._data_bitorus15x15.xml-mALNS-t1800-iGREEDY__2012-04-20_02:31:19__566761312  stat-f._data_bitorus15x15.xml-mALNS-t1800-iGREEDY__2012-04-20_08:39:28__3755023027  stat-f._data_bitorus15x15.xml-mALNS-t1800-iGREEDY__2012-04-20_13:47:19__791354111  stat-f._data_bitorus15x15.xml-mALNS-t1800-iRANDOM__2012-04-20_02:01:13__19044775  stat-f._data_bitorus15x15.xml-mALNS-t1800-iRANDOM__2012-04-20_08:39:32__1602747850  stat-f._data_bitorus15x15.xml-mALNS-t1800-iRANDOM__2012-04-20_10:28:01__1412110901  stat-f._data_bitorus15x15.xml-mALNS-t1800-iRANDOM__2012-04-20_13:47:18__3197437117  stat-f._data_bitorus15x15.xml-mALNS-t1800-irGREEDY__2012-04-20_02:01:13__4264002209  stat-f._data_bitorus15x15.xml-mALNS-t1800-irGREEDY__2012-04-20_09:09:29__4000035028  stat-f._data_bitorus15x15.xml-mALNS-t1800-irGREEDY__2012-04-20_10:28:06__1663555220  stat-f._data_bitorus15x15.xml-mALNS-t1800-irGREEDY__2012-04-20_13:47:22__3912622192  stat-f._data_bitorus15x15.xml-mBAD_RANDOM__2012-04-20_02:01:15__1584347201  stat-f._data_bitorus15x15.xml-mBAD_RANDOM__2012-04-20_08:39:25__2185293261  stat-f._data_bitorus15x15.xml-mBAD_RANDOM__2012-04-20_13:47:24__1134678243  stat-f._data_bitorus15x15.xml-mGRASP-t1800-b0.01__2012-04-20_02:01:13__660574583  stat-f._data_bitorus15x15.xml-mGRASP-t1800-b0.01__2012-04-20_08:39:28__3151578394  stat-f._data_bitorus15x15.xml-mGRASP-t1800-b0.01__2012-04-20_13:47:23__912577969  stat-f._data_bitorus15x15.xml-mGRASP-t1800-b0.02__2012-04-20_02:02:58__1966882698  (+531 more)
test/: b10x10_cf0.10_(1_5).xml  b10x10_cf0.30_(1_5).xml  b10x10_cf0.50_(1_5).xml  b10x10_cf0.70_(1_5).xml  b10x10_cf0.90_(1_5).xml  b15x15_cf0.10_(1_5).xml  b15x15_cf0.30_(1_5).xml  b15x15_cf0.50_(1_5).xml  b15x15_cf0.70_(1_5).xml  b15x15_cf0.90_(1_5).xml  b3x3_cf0.10_(1_5).xml  b3x3_cf0.30_(1_5).xml  b3x3_cf0.50_(1_5).xml  b3x3_cf0.70_(1_5).xml  b3x3_cf0.90_(1_5).xml  b4x4_cf0.10_(1_5).xml  b4x4_cf0.30_(1_5).xml  b4x4_cf0.50_(1_5).xml  b4x4_cf0.70_(1_5).xml  b4x4_cf0.90_(1_5).xml  b5x5_cf0.10_(1_5).xml  b5x5_cf0.30_(1_5).xml  b5x5_cf0.50_(1_5).xml  b5x5_cf0.70_(1_5).xml  b5x5_cf0.90_(1_5).xml  b8x8_cf0.10_(1_5).xml  b8x8_cf0.30_(1_5).xml  b8x8_cf0.50_(1_5).xml  b8x8_cf0.70_(1_5).xml  b8x8_cf0.90_(1_5).xml
test_a2a/: a2a_test_result.txt  results.sh  test.sh
test_mcsl/: MCSL_results.sh  MCSL_test.sh  test_result.txt
(+41 files in other folders)
